{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "TouchControls",
            "id": "075615d6-9eec-45b2-b4f8-01a43207b769",
            "actions": [
                {
                    "name": "HoldAction",
                    "type": "Button",
                    "id": "966e3944-60c4-46c5-abd3-4022069ebe7c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fc1a4ee1-036f-4997-b9aa-249e096c598b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HoldAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f381c0b-804c-4189-a82a-3a018c09078e",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HoldAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}